--- a/4_valutazione_prestazioni.tex
+++ b/4_valutazione_prestazioni.tex
@@ -39,6 +39,20 @@ Per la realizzazione di tali esperimenti sono stati usati i seguenti dispositivi
 \captionof{figure}{Google Nexus 5}\label{nexus_5_img}%
 \end{center}
 
+-Samsung Galaxy S3
+
+\begin{center}
+\includegraphics[width=1\textwidth]{imgs/galaxy_s3.jpg}
+\captionof{figure}{Samsung Galaxy S3}\label{galaxys3_img}%
+\end{center}
+
+-Samsung Galaxy Tab 2
+
+\begin{center}
+\includegraphics[width=1\textwidth]{imgs/galaxy_tab_2.jpg}
+\captionof{figure}{Samsung Galaxy Tab 2}\label{galaxy_tab_2_img}%
+\end{center}
+
 \section{Esperimenti}
 Per effettuare il calcolo delle 3 metriche ho eseguito i test in 2 ambienti:Indoor e Outdoor.
 
