--- a/5_risultati.tex
+++ b/5_risultati.tex
@@ -93,4 +93,6 @@ Quindi, riassumendo tutti e 4 i grafici in uno solo:
 \captionof{figure}{Rappresentazione tempo associazione tra più dispositivi senza Group Owner in ambiente Outdoor}\label{probabilityofassociation_img}%
 \end{center}
 
+In conclusione si può notare che la probabilità di associazione tra 2 dispositivi è pari ad 1 (quindi una certezza), mentre invece per il caso di 3 dispositivi o 4 dispositivi la probabilità massima è rispettivamente di 0.6 e 0.4.
+
 \clearpage{\pagestyle{empty}\cleardoublepage}
