--- a/6_conclusioni.tex
+++ b/6_conclusioni.tex
@@ -10,3 +10,8 @@ Inoltre si è constatato anche che il numero massimo di dispositivi associabili 
 
 \subsection{Sviluppi Futuri}
 
+Visto i risultati che sono stati ottenuti, si potrebbe pensare di approfondire alcuni concetti per l'impiego di tale tecnologia:
+
+- Uso di tale tecnologia in ambito Videogames.
+
+- Eseguire studi più approfonditi, per un uso in mobilità.
