--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,6 @@
 
 \em
 Dedica da fare\\
-Qui potrai scrivere quello che vuoi\\
 \newpage
 
 \end{titlepage}
@@ -126,16 +125,6 @@ INDICE}}
 \listoffigures
 
 
-%%%%%%%%%%%%%%% ELENCO DELLE TABELLE %%%%%%%%%%%%%%%
-\clearpage{\pagestyle{empty}\cleardoublepage}
-\listoftables
-
-
-%%%%%%%%%%%%%%% ELENCO DEL CODICE %%%%%%%%%%%%%%%
-\clearpage{\pagestyle{empty}\cleardoublepage}
-\lstlistoflistings
-
-
 %%%%%%%%%%%%%%% CAPITOLO %%%%%%%%%%%%%%%
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \lhead[\fancyplain{}{\bfseries\thepage}]{\fancyplain{}{\bfseries\rightmark}}
@@ -148,5 +137,6 @@ INDICE}}
 \include{4_valutazione_prestazioni}
 \include{5_risultati}
 \include{6_conclusioni}
+\include{7_bibliografia}
 
 \end{document}
