--- a/1_introduzione.tex
+++ b/1_introduzione.tex
@@ -9,6 +9,7 @@ INTRODUZIONE}}
 Con il continuo sviluppo del mondo inerente agli smartphone si è arrivati alla nascita di nuove tecnologie utili per la comunicazione tra di essi ( Device-to-Device ).
 In passato, e anche ora, veniva impiegata la tecnologia del Bluetooth per far comunicare 2 dispositivi smartphone e permettergli quindi di scambiarsi file di vario genere ( musica, immagini, video, ecc… ).
 Ma da poco tempo è stata introdotta una nuova tecnologia utile allo stesso scopo che si basa sul protocollo del Wi-Fi: il Wi-Fi Direct.
+Tale tecnologia però non presenta esclusivamente le stesse funzionalità e gli stessi impieghi di Bluetooth, in quanto può essere usata anche in caso di mancanza di copertura cellulare o in caso di una catastrofe naturale, in tali ambiti questa tecnologia può diventare di vitale importanza in quanto non ha bisogno ne di una copertura cellulare e ne di un Hotspot che gli fornisca internet per poter permettere la comunicazione tra dispositivi.
 In questa tesi quindi ci si è occupati di studiare più a fondo lo standard del WiFi-Direct, illustrandone il funzionamento, l’architettura, e gli scenari di utilizzo.
 Successivamente sono stati effettuati dei test per determinare la reale efficienza di tale standard, costruendo appositi applicativi e calcolando determinate metriche: Packet Delivery Ratio, Throughput e Round Trip Time.
 Per l’esecuzione di tali esperimenti è stato utilizzato il sistema operativo Android.
