--- a/2_tecnologia_wifi_direct.tex
+++ b/2_tecnologia_wifi_direct.tex
@@ -83,9 +83,16 @@ Nel caso in cui alla riconnessione tutti e due i dispositivi abbiamo già le cre
 
 
 
-\section{Possibili applicazioni}
+\section{Confronto con altre tecnologie}
 
 Fino ad ora abbiamo spiegato nel dettaglio come funziona l’architettura WiFi Direct e abbiamo detto che si occupa di far comunicare due dispositivi senza bisogno di un hotspot, potremo dire quindi che è identico alla tecnologia Bluetooth, invece no, perché ha una grande differenza rispetto a quest’ultima, e cioè una migliore velocità nel trasferire le cose, tutto questo perché Wi-Fi Direct implementa per il trasferimento lo stesso protocollo di Wi-Fi.
+Qui di seguito viene riportata una tabella che confronta tale tecnologia con Bluetooth:
+
+\begin{center}
+\includegraphics[width=1\textwidth]{imgs/WvsB.jpg}
+\captionof{figure}{Wi-Fi Direct e Bluetooth messi a confronto}\label{WvsB_img}%
+\end{center}
+
 Per questo le varie applicazioni di questa tecnologia vanno pian piano ad espandersi, fino ad ora lo troviamo impiegato in: 
 condivisione di file, sincronizzazione, stampa, video games e tutto ciò senza la necessità di trovare una connessione a internet per comunicare con i device.
 Per la parte di applicazione lato condivisione di file lo troviamo nell’applicazione “Wi-Fi Shoot” che è un applicazione molto semplice, che permette una volta che i dispositivi si sono associati di scambiarsi file.
