--- a/4_valutazione_prestazioni.tex
+++ b/4_valutazione_prestazioni.tex
@@ -134,6 +134,7 @@ Negli esperimenti è stato considerato un tempo di 50 secondi e una dimensione d
 
 Il calcolo del Discovery Time indica il tempo impiegato dai 2 dispositivi per trovarsi e associarsi.
 
+Tale calcolo è stato fatto eseguendo la fase di Discovery per 30 volte per ogni singola distanza, successivamente si è eseguito un semplice calcolo della media prendendo e sommando tutti i valori uguali ( esempio se per più volte abbiamo ottenuto un tempo di 5 secondi sarà: 5+5+5+5.... ) e dividendoli per 30, tale risultato verrà poi trasformato in percentuale.
 
 
 
