--- a/7_bibliografia.tex
+++ b/7_bibliografia.tex
@@ -1,3 +1,5 @@
+\chapter{Bibliografia}
+
 1- Device-to-Device Communications with Wi-Fi Direct: Overview and
    experimentation (Daniel Camps-Mur, Nec Network Laboratories, Andreas
    Garcia-Saavedra and Pablo Serrano, Universidad Carlos III De Madrid)
@@ -9,5 +11,5 @@
 4- http://developer.android.com/guide/topics/connectivity/wifip2p.html
 
 5- Device-to-device communications with Wi-Fi Direct: overview and
-   experimentation (Daniel Camps-Mur, Andres Garcia-Saavedra and Pablo          Serrano)
+   experimentation (Daniel Camps-Mur, Andres Garcia-Saavedra and Pablo Serrano)
    
