--- a/6_conclusioni.tex
+++ b/6_conclusioni.tex
@@ -1,3 +1,4 @@
+\chapter{Conclusioni}
 Nella tesi è stato inizialmente descritto lo standard Wi-Fi Direct, approfondendo successivamente anche il suo funzionamento e la sua architettura.
 Dopodichè è stato descritto nel dettaglio il sistema operativo Android, e le applicazioni che tale tecnologia può avere su esso.
 Dopo questa parte teorica, è stata trattata la fase sperimentale, in cui sono stati effettuati e descritti determinati test per la valutazione delle metriche.
@@ -8,10 +9,12 @@ Inoltre tali test sono stati ripetuti anche usando dispositivi meno recenti, e s
 Un altra scoperta è stata nel calcolo del Discovery Time, dove si è appurato che i test dove veniva implementato il Group Owner risultavano migliori rispetto a quello senza GO, questo perchè con l'utilizzo del Group Owner si può saltare la fase di negoziazione (fase in cui i due dispositivi perdono tempo a decidere chi dovrà essere il server e chi il client).
 Inoltre si è constatato anche che il numero massimo di dispositivi associabili tra loro è pari a 4, anche se in verità raramente la connessione tra tutti e 4 i dispositivi avviene, infatti dopo 40 secondi la probabilità che l'associazione sia terminata è pari a 0.4.
 
-\subsection{Sviluppi Futuri}
+\section{Sviluppi Futuri}
 
 Visto i risultati che sono stati ottenuti, si potrebbe pensare di approfondire alcuni concetti per l'impiego di tale tecnologia:
 
 - Uso di tale tecnologia in ambito Videogames.
 
 - Eseguire studi più approfonditi, per un uso in mobilità.
+
+\clearpage{\pagestyle{empty}\cleardoublepage}
